apps/helpdesk/src/pages/common/utils/labels.less
@import (reference) '~css/typography.less';

:local {
    .AgentLabel,
    .TeamLabel {
        display: inline-flex;
        align-items: baseline;
        max-width: 100%;
        max-height: 100%;

        .avatar {
            margin-right: 8px;
            height: 26px;
            align-self: center;
        }

        .agentIcon {
            margin-right: 4px;
            align-self: center;
        }

        .name {
            overflow: hidden;
            margin-left: 4px;
            line-height: normal;
            font-weight: 500;
            white-space: nowrap;
            text-overflow: ellipsis;

            &.semibold {
                .body-semibold();
            }

            &.aiAgent {
                color: var(--accessory-magenta-3);
                margin-left: 0px;
            }
        }
    }

    .nameIcon {
        margin-left: 5px;
    }

    .assigneeLabelContainer {
        display: inline-flex;
        align-items: center;
        gap: var(--layout-spacing-xs);
    }

    .assigneeLabelAvatar {
        display: inline-block;
        height: 26px;
        width: 26px;
    }

    .recipientLabel {
        display: inline-block;
        padding: 0.25em 0.76em 0.25em 0.76em;
        margin: 0 4px 4px 0;

        background: var(--neutral-grey-2);
        color: var(--neutral-grey-6);
        font-weight: 600;
        font-size: 12px;
        word-break: break-all;
        border-radius: 4px;
    }

    .storeIcon {
        display: inline;
        max-height: 16px;
        margin-right: var(--layout-spacing-xs);
        vertical-align: text-top;
        width: auto;
    }
}

.ticket-thread-revamp :local {
    .name {
        margin-left: 0;
    }
}

